--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,5 @@
 # ============================================================================
-# Voice Dictation Server Configuration
+# Tambourine Server Configuration
 # ============================================================================
 # Copy this file to .env and fill in your actual API keys
 # At least one STT provider and one LLM provider are required
@@ -9,30 +9,54 @@
 # Speech-to-Text (STT) Providers - At least one required
 # ----------------------------------------------------------------------------
 
-# Cartesia Ink-Whisper
-# https://cartesia.ai
-# CARTESIA_API_KEY=your_cartesia_api_key_here
-
 # AssemblyAI
 # https://www.assemblyai.com
 # ASSEMBLYAI_API_KEY=your_assemblyai_api_key_here
 
+# Cartesia Ink-Whisper
+# https://cartesia.ai
+# CARTESIA_API_KEY=your_cartesia_api_key_here
+
 # Deepgram
-# Sign up: https://deepgram.com
-# Get API key from: https://console.deepgram.com
+# https://console.deepgram.com
 # DEEPGRAM_API_KEY=your_deepgram_api_key_here
+
+# AWS Transcribe
+# https://aws.amazon.com/transcribe
+# AWS_ACCESS_KEY_ID=your_aws_access_key_id_here
+# AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key_here
+# AWS_REGION=us-east-1
+
+# Azure Speech
+# https://azure.microsoft.com/en-us/products/ai-services/speech-services
+# AZURE_SPEECH_KEY=your_azure_speech_key_here
+# AZURE_SPEECH_REGION=eastus
+
+# OpenAI Whisper (uses OpenAI API key)
+# https://platform.openai.com
+# Set OPENAI_API_KEY below to enable
+
+# Google Speech (uses Google service account)
+# https://cloud.google.com/speech-to-text
+# GOOGLE_APPLICATION_CREDENTIALS=/path/to/service-account.json
+
+# Groq (uses Groq API key)
+# https://console.groq.com
+# Set GROQ_API_KEY below to enable
+
+# Local Whisper (no API key required)
+# Runs locally using faster-whisper
+# Enabling this will download the Whisper model on first run
+# WHISPER_ENABLED=false
 
 # ----------------------------------------------------------------------------
 # Large Language Model (LLM) Providers - At least one required
 # ----------------------------------------------------------------------------
 
-# Cerebras
-# https://cloud.cerebras.ai
-# CEREBRAS_API_KEY=your_cerebras_api_key_here
-
 # OpenAI
 # https://platform.openai.com
 # OPENAI_API_KEY=your_openai_api_key_here
+# OPENAI_BASE_URL=https://api.openai.com/v1  # Optional: for OpenAI-compatible endpoints
 
 # Google Gemini
 # https://aistudio.google.com/apikey
@@ -42,22 +66,31 @@
 # https://console.anthropic.com
 # ANTHROPIC_API_KEY=your_anthropic_api_key_here
 
+# Cerebras
+# https://cloud.cerebras.ai
+# CEREBRAS_API_KEY=your_cerebras_api_key_here
+
 # Groq
 # https://console.groq.com
 # GROQ_API_KEY=your_groq_api_key_here
 
-# ----------------------------------------------------------------------------
-# Default Providers (Optional)
-# ----------------------------------------------------------------------------
-# If not set, the first available provider will be used automatically
-# DEFAULT_STT_PROVIDER=default_stt_provider_name_here
-# DEFAULT_LLM_PROVIDER=default_llm_provider_name_here
+# Google Vertex AI (uses Google service account)
+# https://cloud.google.com/vertex-ai
+# GOOGLE_APPLICATION_CREDENTIALS=/path/to/service-account.json
+
+# Ollama (local, requires base URL to enable)
+# https://ollama.ai
+# OLLAMA_BASE_URL=http://localhost:11434
+
+# OpenRouter
+# https://openrouter.ai
+# OPENROUTER_API_KEY=your_openrouter_api_key_here
 
 # ----------------------------------------------------------------------------
-# Server Configuration
+# Server Configuration (Optional)
 # ----------------------------------------------------------------------------
-DICTATION_SERVER_HOST=127.0.0.1
-DICTATION_SERVER_PORT=8765
+# HOST=127.0.0.1
+# PORT=8765
 
 # ----------------------------------------------------------------------------
 # Logging Configuration (Optional)
