--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
 	"author": "kstonekuan",
 	"license": "AGPL-3.0",
 	"dependencies": {
+		"@daily-co/daily-js": "^0.85.0",
 		"@mantine/core": "^8.3.10",
 		"@mantine/hooks": "^8.3.10",
 		"@pipecat-ai/client-js": "^1.5.0",
@@ -39,7 +40,7 @@
 		"@types/react": "19.2.7",
 		"@types/react-dom": "19.2.3",
 		"@vitejs/plugin-react": "5.1.2",
-		"knip": "^5.72.0",
+		"knip": "^5.73.0",
 		"typescript": "^5.9.3",
 		"vite": "^7.2.7",
 		"vite-plugin-svgr": "^4.5.0"
